fix: typos fixed

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <h1 class="black">Consigue tu entrada!</h1>
     <div class="row centered">
       <div class="colM TicketCard glass-card centered">
-        <h3>¿Que incluye?</h3>
+        <h3>¿Qué incluye?</h3>
         <ul>
           <li>
             <span class="material-icons-round orange-tick">
@@ -320,7 +320,7 @@
             <span class="material-icons-round orange-tick">
               check
             </span>
-            Y muchas más sorpresas!
+            ¡Y muchas más sorpresas!
           </li>
         </ul>
         <a href="https://www.eventbrite.es/e/entradas-salmorejotech-2022-314465543907" target="_blank" rel="noopener noreferrer" class="ticketBtn">Consigue tu entrada ahora mismo!</a>
@@ -345,14 +345,14 @@
         </ul>
       </div>
       <div class="contactInfo">
-        <h1>¡Encuentranos!</h1>
+        <h1>¡Encuéntranos!</h1>
         <h3><a href="mailto:aulasoftwarelibre@uco.es" target="_blank" rel="noopener noreferrer"><i class="fa fa-envelope"></i> aulasoftwarelibre@uco.es</a></h3>
         <h3><a href="https://g.page/aulasoftwarelibre?share" target="_blank" rel="noopener noreferrer"><i class="fa fa-location-dot"></i> Aulario Averroes.<br/>Campus de Rabanales</a></h3>
       </div>
     </div>
     <div class="second-row">
       <h3>
-        <i class="fa fa-copyright flip"></i> Aula de Software Libre. Universidad de Cordoba.
+        <i class="fa fa-copyright flip"></i> Aula de Software Libre. Universidad de Córdoba.
       </h3>
     </div>
   </footer>
