feat: added adrian bolonio and cynthia galvez to speakers list

--- a/index.html
+++ b/index.html
@@ -260,6 +260,40 @@
           </div>
         </div>
       </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/cynthiaGalvez.jpg">
+        </div>
+        <div class="Label">
+          <h3>Cynthia Gálvez</h3>
+          <p>Ingeniera especializada en Realidad Aumentada</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/icynthia" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-twitter"></a></li>
+              <li><a href="https://www.linkedin.com/in/cynthiagalvezlopez/" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-linkedin"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/adrianBolonio.jpg">
+        </div>
+        <div class="Label">
+          <h3>Adrián Bolonio</h3>
+          <p>Accessibility Software Engineer en github</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/bolonio" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
+              </li>
+              <li><a href="https://www.linkedin.com/in/adrianbolonio/" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-linkedin"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Schedule -->
