fix: fixed twitter metadata

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <link rel="canonical" href="https://salmorejo.tech" />
   
   <!-- Social - Twitter -->
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@AulaSL" />
   <meta name="twitter:title" content="SalmorejoTech 2022" />
   <meta name="twitter:description"
     content="SalmorejoTech es un evento tecnológico para todos aquellos dispuestos a aprender" />
-  <meta name="twitter:image:src" content="https://salmorejo.tech/2022/seo/salmorejo_fondo.jpg" />
+  <meta name="twitter:image" content="https://salmorejo.tech/2022/images/seo/salmorejo_fondo.jpg" />
   
   <!-- Social: Facebook / Open Graph -->
   <meta name="og:type" content="website" />
