feat: added tasia to speakers lsit

--- a/index.html
+++ b/index.html
@@ -294,6 +294,23 @@
           </div>
         </div>
       </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/anastasiaKondratieva.jpeg">
+        </div>
+        <div class="Label">
+          <h3>Anastasia Kondratieva</h3>
+          <p>SRE en Clarity AI</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/AnastasiaKnt" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
+              </li>
+              <li><a href="https://www.linkedin.com/in/anastasiakondratieva/" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-linkedin"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Schedule -->
