fix: changed spelling of github to GitHub

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </div>
         <div class="Label">
           <h3>Adrián Bolonio</h3>
-          <p>Accessibility Software Engineer en github</p>
+          <p>Accessibility Software Engineer en GitHub</p>
           <div class="RRSS">
             <ul>
               <li><a href="https://twitter.com/bolonio" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
