feat: added juantomas to speakers

--- a/index.html
+++ b/index.html
@@ -311,6 +311,24 @@
           </div>
         </div>
       </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/juantomasGarcia.jpg">
+        </div>
+        <div class="Label">
+          <h3>Juantomás Garcia</h3>
+          <p>Chief Envisioning Officer en SNGULAR</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/juantomas" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-twitter"></a>
+              </li>
+              <li><a href="https://www.linkedin.com/in/juantomasgarcia/" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-linkedin"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Schedule -->
