feat: added bárbara to speakers list

--- a/index.html
+++ b/index.html
@@ -329,6 +329,23 @@
           </div>
         </div>
       </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/barbaraMelero.jpg">
+        </div>
+        <div class="Label">
+          <h3>Bárbara Melero</h3>
+          <p>Front-end Developer en Schwarz IT Barcelona</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/adrenaline500mg" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
+              </li>
+              <li><a href="https://www.linkedin.com/in/b%C3%A1rbara-melero-l%C3%B3pez-7b173787/" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-linkedin"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Schedule -->
