--- a/index.html
+++ b/index.html
@@ -346,6 +346,24 @@
           </div>
         </div>
       </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/sergioGomez.jpg">
+        </div>
+        <div class="Label">
+          <h3>Sergio Gómez</h3>
+          <p>Backend Lead en Certainly</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/sgomez" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-twitter"></a>
+              </li>
+              <li><a href="https://www.linkedin.com/in/decano/" target="_blank"
+                  rel="noopener noreferrer" class="fa fa-linkedin"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Schedule -->
