feat: added Manuel Sanchez to speakers

--- a/index.html
+++ b/index.html
@@ -364,6 +364,23 @@
           </div>
         </div>
       </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/manuelSanchez.jpg">
+        </div>
+        <div class="Label">
+          <h3>Manuel Sánchez</h3>
+          <p>Azure Evangelist & Technical Manager at NTT DATA</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/Manuss20" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
+              </li>
+              <li><a href="https://www.linkedin.com/in/manuelsanchezrodriguez/" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-linkedin"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Schedule -->
