--- a/index.html
+++ b/index.html
@@ -408,7 +408,9 @@
         </a>
       </div>
       <div class="sponsor">
-        <img src="./images/sprites/isologo.svg" alt="Sponsor4" />
+        <a href="https://www.uco.es/eps/es/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/epsc.svg" alt="epsc" />
+        </a>
       </div>
     </div>
   </section>
