--- a/index.html
+++ b/index.html
@@ -412,6 +412,11 @@
           <img src="./images/sponsors/epsc.svg" alt="epsc" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://atmira.com/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/atmira.svg" alt="atmira" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
