--- a/index.html
+++ b/index.html
@@ -417,6 +417,11 @@
           <img src="./images/sponsors/atmira.svg" alt="atmira" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://intelygenz.com/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/intelygenz.png" alt="intelygenz" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
