--- a/index.html
+++ b/index.html
@@ -422,6 +422,11 @@
           <img src="./images/sponsors/intelygenz.png" alt="intelygenz" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.sngular.com/es/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/SNGULAR.svg" alt="SNGULAR" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
