--- a/index.html
+++ b/index.html
@@ -381,6 +381,23 @@
           </div>
         </div>
       </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/gemaParreno.jpg">
+        </div>
+        <div class="Label">
+          <h3>Gema Parreño</h3>
+          <p>Lead Data Scientist</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/SoyGema" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
+              </li>
+              <li><a href="https://www.linkedin.com/in/gemaparreno/" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-linkedin"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Schedule -->
