--- a/index.html
+++ b/index.html
@@ -444,6 +444,11 @@
           <img src="./images/sponsors/SNGULAR.svg" alt="SNGULAR" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.uco.es/webuco/otri/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/otri.svg" alt="OTRI" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
