--- a/index.html
+++ b/index.html
@@ -449,6 +449,11 @@
           <img src="./images/sponsors/otri.svg" alt="OTRI" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.rti.com/en/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/rti.svg" alt="RTI" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
