--- a/index.html
+++ b/index.html
@@ -446,12 +446,12 @@
       </div>
       <div class="sponsor">
         <a href="http://www.uco.es/webuco/otri/" target="_blank" rel="noreferrer noopener">
-          <img src="./images/sponsors/otri.svg" alt="OTRI" />
+          <img src="./images/sponsors/otri.svg" alt="OTRI" style="transform: scale(0.75)" />
         </a>
       </div>
       <div class="sponsor">
         <a href="https://www.rti.com/en/" target="_blank" rel="noreferrer noopener">
-          <img src="./images/sponsors/rti.svg" alt="RTI" />
+          <img src="./images/sponsors/rti.svg" alt="RTI" style="transform: scale(0.65)"/>
         </a>
       </div>
     </div>
