chore: added alt props to all img's

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <li>
       <section id="Navbar" class="Navbar">
         <li id="Nav-Isologo" class="nav-isologo nodisplay">
-          <a id="nav-Hero"><img src="./images/sprites/isologo-blanco.png" /></a>
+          <a id="nav-Hero"><img src="./images/sprites/isologo-blanco.png" alt="isologo blanco salmorejo"/></a>
         </li>
         <ul>
           <li id="nav-About"><a>Introducción</a></li>
@@ -94,7 +94,7 @@
   <!-- Hero -->
   <section id="Hero" class="Hero-section"> 
     <div class="Hero-Text-Block">
-      <img class="Hero-Isologo" src="./images/sprites/isologo-blanco.png"/>
+      <img class="Hero-Isologo" src="./images/sprites/isologo-blanco.png" alt="isologo blanco Salmorejo"/>
       <h2>Tu evento tecnológico con sabor <span>cordobés</span></h2>
       <h2>Más <span id="typingText" class="typing"></span></h2>
       <h3>13 DE <span>MAYO</span> DE 2022</h3>
@@ -163,10 +163,10 @@
     <div class="grid">
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/eduSatoe.jpg">
+          <img src="images/speakers/eduSatoe.jpg" alt="Foto de Eduardo Sánchez">
         </div>
         <div class="Label">
-          <h3>Eduardo Sanchez</h3>
+          <h3>Eduardo Sánchez</h3>
           <p>CEO AllPentesting</p>
           <div class="RRSS">
             <ul>
@@ -178,7 +178,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/paulaGarcia.jpg">
+          <img src="images/speakers/paulaGarcia.jpg" alt="Foto de Paula García">
         </div>
         <div class="Label">
           <h3>Paula García</h3>
@@ -194,7 +194,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/inesHuertas.jpg">
+          <img src="images/speakers/inesHuertas.jpg" alt="Foto de Ines Huertas">
         </div>
         <div class="Label">
           <h3>Inés Huertas</h3>
@@ -211,7 +211,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/davidBonilla.jpg">
+          <img src="images/speakers/davidBonilla.jpg" alt="Foto de David Bonilla">
         </div>
         <div class="Label">
           <h3>David Bonilla</h3>
@@ -228,7 +228,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/carmenAnsio.jpg">
+          <img src="images/speakers/carmenAnsio.jpg" alt="Foto de Carmen Ansio">
         </div>
         <div class="Label">
           <h3>Carmen Ansio</h3>
@@ -245,7 +245,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/carlosBuenosvinos.jpg">
+          <img src="images/speakers/carlosBuenosvinos.jpg" alt="Foto de Carlos Buenosvinos">
         </div>
         <div class="Label">
           <h3>Carlos Buenosvinos</h3>
@@ -262,7 +262,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/cynthiaGalvez.jpg">
+          <img src="images/speakers/cynthiaGalvez.jpg" alt="Foto de Cynthia Gálvez">
         </div>
         <div class="Label">
           <h3>Cynthia Gálvez</h3>
@@ -279,7 +279,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/adrianBolonio.jpg">
+          <img src="images/speakers/adrianBolonio.jpg" alt="Foto de Adrián Bolonio">
         </div>
         <div class="Label">
           <h3>Adrián Bolonio</h3>
@@ -296,7 +296,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/anastasiaKondratieva.jpeg">
+          <img src="images/speakers/anastasiaKondratieva.jpeg" alt="Foto de Anastasia Kondratieva">
         </div>
         <div class="Label">
           <h3>Anastasia Kondratieva</h3>
@@ -313,10 +313,10 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/juantomasGarcia.jpg">
+          <img src="images/speakers/juantomasGarcia.jpg" alt="Foto de Juantomás García">
         </div>
         <div class="Label">
-          <h3>Juantomás Garcia</h3>
+          <h3>Juantomás García</h3>
           <p>Chief Envisioning Officer en SNGULAR</p>
           <div class="RRSS">
             <ul>
@@ -331,7 +331,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/barbaraMelero.jpg">
+          <img src="images/speakers/barbaraMelero.jpg" alt="Foto de Bárbara Melero">
         </div>
         <div class="Label">
           <h3>Bárbara Melero</h3>
@@ -348,7 +348,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/sergioGomez.jpg">
+          <img src="images/speakers/sergioGomez.jpg" alt="Foto de Sergio Gómez">
         </div>
         <div class="Label">
           <h3>Sergio Gómez</h3>
@@ -366,7 +366,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/manuelSanchez.jpg">
+          <img src="images/speakers/manuelSanchez.jpg" alt="Foto de Manuel Sánchez">
         </div>
         <div class="Label">
           <h3>Manuel Sánchez</h3>
@@ -383,7 +383,7 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/gemaParreno.jpg">
+          <img src="images/speakers/gemaParreno.jpg" alt="Foto de Gema Parreño">
         </div>
         <div class="Label">
           <h3>Gema Parreño</h3>
