--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@
         </a>
       </div>
       <div class="sponsor">
-        <a href="https://www.rti.com/en/" target="_blank" rel="noreferrer noopener">
-          <img src="./images/sponsors/rti.svg" alt="RTI" style="transform: scale(0.65)"/>
+        <a href="https://nosolosoftware.es/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/nss.svg" alt="NoSoloSoftware"/>
         </a>
       </div>
     </div>
