--- a/index.html
+++ b/index.html
@@ -454,6 +454,11 @@
           <img src="./images/sponsors/nss.svg" alt="NoSoloSoftware"/>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.aicor.com/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/aicor.png" alt="Aicor" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
