--- a/index.html
+++ b/index.html
@@ -459,6 +459,11 @@
           <img src="./images/sponsors/aicor.png" alt="Aicor" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://certainly.io/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/certainly.svg" alt="Certainly" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
