feat: added Consejo social to sponsors

--- a/index.html
+++ b/index.html
@@ -464,6 +464,11 @@
           <img src="./images/sponsors/certainly.svg" alt="Certainly" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.uco.es/organizacion/consejosocial/index.php/es/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/consejo-social.png" alt="Consejo Social" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
