feat: added genially to sponsors

--- a/index.html
+++ b/index.html
@@ -469,6 +469,11 @@
           <img src="./images/sponsors/consejo-social.png" alt="Consejo Social" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://genial.ly/es/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/genially.svg" alt="Genially" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
