feat: added Rabanales 21 and UCO to sponsors

--- a/index.html
+++ b/index.html
@@ -474,6 +474,16 @@
           <img src="./images/sponsors/genially.svg" alt="Genially" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://rabanales21.com/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/rab21.svg" alt="Rabanales 21" />
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://www.uco.es/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/uco.png" alt="Universidad de Córdoba" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
