--- a/index.html
+++ b/index.html
@@ -484,6 +484,11 @@
           <img src="./images/sponsors/uco.png" alt="Universidad de Córdoba" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://es.nttdata.com/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/nttdata.svg" alt="Ntt Data" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
