--- a/index.html
+++ b/index.html
@@ -489,6 +489,11 @@
           <img src="./images/sponsors/nttdata.svg" alt="Ntt Data" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://cabify.com/es" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/cabify.svg" alt="Cabify" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
