feat: added DattaCapital as mecenas

--- a/index.html
+++ b/index.html
@@ -408,6 +408,27 @@
   <!-- Sponsors -->
   <section id="Sponsors" class="Section Sponsors white">
     <h1 class="black">Patrocinadores</h1>
+    <!-- Mecenas Datta Capital-->
+    <section id="About-cont" class="About centered">
+      <h1 class="">Datta Capital</h1>
+      <div class="row centered">
+        <div class="colS centered">
+          <a href="https://datta.capital/" target="_blank" rel="noreferrer noopener">
+            <img src="./images/sponsors/Datta.png" style="transform: scale(1.8);margin: 30px;" alt="Datta Capital" />
+          </a>
+        </div>
+        <div class="colM centered" >
+          <p>
+            <a style="color:var(--primary-color);text-decoration: none;font-weight: bold;" href="https://datta.capital/" target="_blank" rel="noopener noreferrer">Datta Capital</a> es una empresa cordobesa que actúa como caja de capital local. Se basan en datos
+            y automatizaciones, ponen en contacto al empresariado local y aceleran las relaciones económicas de los cordobeses
+          </p>
+          <br/>
+          <p>
+            Como mecenas, sin ellos el salmorejotech no sería posible.
+          </p>
+        </div>
+      </div>
+    </section>
     <div class="grid">
       <div class="sponsor">
         <a href="https://es.audiense.com/" target="_blank" rel="noreferrer noopener">
