feat: added some keywords and changed lang to es

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
   <!-- Meta info - General -->
   <meta name="description" content="SalmorejoTech es un evento tecnológico para todos aquellos dispuestos a aprender" />
   <meta name="keywords"
-    content="evento, ASL, salmorejo, salmorejotech, salmorejotech2021, congreso, mesa redonda, conferencia, libre, software libre" />
+    content="evento, ASL, salmorejo, salmorejotech, tech, salmorejotech2022, 2022, salmorejotech2021, congreso, mesa redonda, conferencia, libre, software libre" />
   <link rel="canonical" href="https://salmorejo.tech" />
   
   <!-- Social - Twitter -->
