--- a/index.html
+++ b/index.html
@@ -515,6 +515,11 @@
           <img src="./images/sponsors/cabify.svg" alt="Cabify" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.infojobs.net/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/InfoJobs.svg" alt="InfoJobs" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
