feat: added schedule to web

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
   <script src="https://kit.fontawesome.com/00d5b47be3.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/styles/main_v009.min.css">
+  <link rel="stylesheet" href="/styles/main_v010.min.css">
   <script type="module" src="/scripts/main_v002.js"></script>  
 
 </head>
@@ -82,8 +82,8 @@
         <ul>
           <li id="nav-About"><a>Introducción</a></li>
           <li id="nav-Place"><a>Lugar</a></li>
-          <li id="nav-Speakers"><a>Ponentes</a></li>
           <li id="nav-Schedule"><a>Horario</a></li>
+          <li id="nav-Speakers"><a>Ponentes</a></li>
           <li id="nav-Sponsors"><a>Patrocinadores</a></li>
           <li id="nav-Tickets"><a>Entradas</a></li>
         </ul>
@@ -156,6 +156,12 @@
       </div>
     </div>
 
+  </section>
+
+  <!-- Schedule -->
+  <section id="Schedule" class="Section Schedule orange">
+    <h1> Programa </h1>
+    <img src="./images/schedule/schedule.png" alt="schedule" />
   </section>
   <!-- Speakers -->
   <section id="Speakers" class="Section Speakers white">
@@ -399,11 +405,6 @@
         </div>
       </div>
     </div>
-  </section>
-  <!-- Schedule -->
-  <section id="Schedule" class="Section orange">
-    <h1 class="" >Horario</h1>
-    <h4>Próximamente...</h4>
   </section>
   <!-- Sponsors -->
   <section id="Sponsors" class="Section Sponsors white">
