--- a/index.html
+++ b/index.html
@@ -526,6 +526,11 @@
           <img src="./images/sponsors/rti.svg" alt="RTI" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.vantpc.es/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/vant.png" alt="vant" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
