feat: added Capgemini to sponsors

--- a/index.html
+++ b/index.html
@@ -531,6 +531,11 @@
           <img src="./images/sponsors/vant.png" alt="vant" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.capgemini.com/es-es/service/capgemini-engineering/" target="_blank" rel="noreferrer noopener">
+          <img style="transform: scale(1.15);" src="./images/sponsors/Capgemini.svg" alt="Capgemini Engineering" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
