feat: ajusted sizes of sponsor logos

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
       </div>
       <div class="sponsor">
         <a href="https://www.rti.com/en/" target="_blank" rel="noreferrer noopener">
-          <img src="./images/sponsors/rti.svg" alt="RTI" />
+          <img style="transform: scale(0.55);" src="./images/sponsors/rti.svg" alt="RTI" />
         </a>
       </div>
       <div class="sponsor">
@@ -533,7 +533,7 @@
       </div>
       <div class="sponsor">
         <a href="https://www.capgemini.com/es-es/service/capgemini-engineering/" target="_blank" rel="noreferrer noopener">
-          <img style="transform: scale(1.15);" src="./images/sponsors/Capgemini.svg" alt="Capgemini Engineering" />
+          <img style="transform: scale(1.25);" src="./images/sponsors/Capgemini.svg" alt="Capgemini Engineering" />
         </a>
       </div>
     </div>
