--- a/index.html
+++ b/index.html
@@ -536,6 +536,11 @@
           <img style="transform: scale(1.25);" src="./images/sponsors/Capgemini.svg" alt="Capgemini Engineering" />
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.cocacolaep.com/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/CCEP.png" alt="Cocacola Europacific Partners" />
+        </a>
+      </div>
     </div>
   </section>
   <!-- About-Cont -->
