--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <base href="https://salmorejo.tech/2022/" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
@@ -26,29 +27,29 @@
   <meta name="og:description"
     content="SalmorejoTech es un evento tecnológico para todos aquellos dispuestos a aprender" />
   <meta name="og:image" content="https://salmorejo.tech/2022/seo/salmorejo_fondo.jpg" />
-  <meta name="og:url" content="https://salmorejo.tech" />
+  <meta name="og:url" content="https://salmorejo.tech/2022/" />
   
   <!-- Icons / Favicon --> 
-  <link rel="shortcut icon" href="/images/favicons/favicon.ico" />
+  <link rel="shortcut icon" href="images/favicons/favicon.ico" />
   
-  <link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" />
-  <link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" href="/images/favicons/favicon-96x96.png" />
-  <link rel="icon" type="image/png" href="/images/favicons/favicon-150x150.png" />
-  <link rel="icon" type="image/png" href="/images/favicons/favicon-310x310.png" />
+  <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" />
+  <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" href="images/favicons/favicon-96x96.png" />
+  <link rel="icon" type="image/png" href="images/favicons/favicon-150x150.png" />
+  <link rel="icon" type="image/png" href="images/favicons/favicon-310x310.png" />
   
-  <link rel="apple-icon" sizes="57x57" href="/images/favicons/apple-icon-57x57.png" />
-  <link rel="apple-icon" sizes="60x60" href="/images/favicons/apple-icon-60x60.png" />
-  <link rel="apple-icon" sizes="72x72" href="/images/favicons/apple-icon-72x72.png" />
-  <link rel="apple-icon" sizes="76x76" href="/images/favicons/apple-icon-76x76.png" />
-  <link rel="apple-icon" sizes="114x114" href="/images/favicons/apple-icon-114x114.png" />
-  <link rel="apple-icon" sizes="120x120" href="/images/favicons/apple-icon-120x120.png" />
-  <link rel="apple-icon" sizes="144x144" href="/images/favicons/apple-icon-144x144.png" />
-  <link rel="apple-icon" sizes="152x152" href="/images/favicons/apple-icon-152x152.png" />
+  <link rel="apple-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png" />
+  <link rel="apple-icon" sizes="60x60" href="images/favicons/apple-icon-60x60.png" />
+  <link rel="apple-icon" sizes="72x72" href="images/favicons/apple-icon-72x72.png" />
+  <link rel="apple-icon" sizes="76x76" href="images/favicons/apple-icon-76x76.png" />
+  <link rel="apple-icon" sizes="114x114" href="images/favicons/apple-icon-114x114.png" />
+  <link rel="apple-icon" sizes="120x120" href="images/favicons/apple-icon-120x120.png" />
+  <link rel="apple-icon" sizes="144x144" href="images/favicons/apple-icon-144x144.png" />
+  <link rel="apple-icon" sizes="152x152" href="images/favicons/apple-icon-152x152.png" />
   
   <meta name="msapplication-TitleColor" content="#ffbd33" />
-  <meta name="msapplication-TitleImage" content="/images/favicons/mstile-144x144.png" />
-  <meta name="msapplication-config" content="/images/favicons/browserconfig.xml" />
+  <meta name="msapplication-TitleImage" content="images/favicons/mstile-144x144.png" />
+  <meta name="msapplication-config" content="images/favicons/browserconfig.xml" />
   <meta name="theme-color" content="#ffbd33" />
   
   <title>Salmorejo 2022</title>
@@ -57,15 +58,15 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
   <script src="https://kit.fontawesome.com/00d5b47be3.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/styles/main_v010.min.css">
-  <script type="module" src="/scripts/main_v002.js"></script>  
+  <link rel="stylesheet" href="styles/main_v012.min.css">
+  <script type="module" src="scripts/main_v002.js"></script>  
 
 </head>
 <body>
 
   <!-- Loading screen-->
   <div id="Loading">
-    <img src="./images/sprites/loader.png" id="tomato" alt="tomato" class="tomato animated">
+    <img src="images/sprites/loader.png" id="tomato" alt="tomato" class="tomato animated">
   </div>
   <!-- Navbar -->
   <ul class="Navbar-zone">
@@ -77,7 +78,7 @@
     <li>
       <section id="Navbar" class="Navbar">
         <li id="Nav-Isologo" class="nav-isologo nodisplay">
-          <a id="nav-Hero"><img src="./images/sprites/isologo-blanco.png" alt="isologo blanco salmorejo"/></a>
+          <a id="nav-Hero"><img src="images/sprites/isologo-blanco.png" alt="isologo blanco salmorejo"/></a>
         </li>
         <ul>
           <li id="nav-About"><a>Introducción</a></li>
@@ -94,7 +95,7 @@
   <!-- Hero -->
   <section id="Hero" class="Hero-section"> 
     <div class="Hero-Text-Block">
-      <img class="Hero-Isologo" src="./images/sprites/isologo-blanco.png" alt="isologo blanco Salmorejo"/>
+      <img class="Hero-Isologo" src="images/sprites/isologo-blanco.png" alt="isologo blanco Salmorejo"/>
       <h2>Tu evento tecnológico con sabor <span>cordobés</span></h2>
       <h2>Más <span id="typingText" class="typing"></span></h2>
       <h3>13 DE <span>MAYO</span> DE 2022</h3>
@@ -161,7 +162,7 @@
   <!-- Schedule -->
   <section id="Schedule" class="Section Schedule orange">
     <h1> Programa </h1>
-    <img src="./images/schedule/schedule.png" alt="schedule" />
+    <img src="images/schedule/schedule1.png" alt="schedule" />
   </section>
   <!-- Speakers -->
   <section id="Speakers" class="Section Speakers white">
@@ -200,16 +201,16 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/inesHuertas.jpg" alt="Foto de Ines Huertas">
+          <img src="images/speakers/javiVelasco.jpg" alt="Foto de Javier Velasco">
         </div>
         <div class="Label">
-          <h3>Inés Huertas</h3>
-          <p>Head of Data & AI en Kairós DS</p>
+          <h3>Javier Velasco</h3>
+          <p>Teach Lead en Vercel</p>
           <div class="RRSS">
             <ul>
-              <li><a href="https://twitter.com/quierodata" target="_blank" rel="noopener noreferrer"
+              <li><a href="https://twitter.com/javivelasco" target="_blank" rel="noopener noreferrer"
                   class="fa fa-twitter"></a></li>
-              <li><a href="https://www.linkedin.com/in/ineshuertas/" target="_blank"
+              <li><a href="https://www.linkedin.com/in/javivelasco/" target="_blank"
                   rel="noopener noreferrer" class="fa fa-linkedin"></a></li>
             </ul>
           </div>
@@ -372,16 +373,16 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/manuelSanchez.jpg" alt="Foto de Manuel Sánchez">
+          <img src="images/speakers/manuFosela.jpg" alt="Foto de Manuel Fosela">
         </div>
         <div class="Label">
-          <h3>Manuel Sánchez</h3>
-          <p>Azure Evangelist & Technical Manager at NTT DATA</p>
+          <h3>Manuel Fosela</h3>
+          <p>Head of Software Development en Kairos_DS</p>
           <div class="RRSS">
             <ul>
-              <li><a href="https://twitter.com/Manuss20" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
+              <li><a href="https://twitter.com/manufosela" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
               </li>
-              <li><a href="https://www.linkedin.com/in/manuelsanchezrodriguez/" target="_blank" rel="noopener noreferrer"
+              <li><a href="https://www.linkedin.com/in/manufosela/" target="_blank" rel="noopener noreferrer"
                   class="fa fa-linkedin"></a></li>
             </ul>
           </div>
@@ -415,7 +416,7 @@
       <div class="row centered">
         <div class="colS centered">
           <a href="https://datta.capital/" target="_blank" rel="noreferrer noopener">
-            <img src="./images/sponsors/Datta.png" style="transform: scale(1.8);margin: 30px;" alt="Datta Capital" />
+            <img src="images/sponsors/Datta.png" style="transform: scale(1.8);margin: 30px;" alt="Datta Capital" />
           </a>
         </div>
         <div class="colM centered" >
@@ -533,7 +534,7 @@
       </div>
       <div class="sponsor">
         <a href="https://www.capgemini.com/es-es/service/capgemini-engineering/" target="_blank" rel="noreferrer noopener">
-          <img style="transform: scale(1.25);" src="./images/sponsors/Capgemini.svg" alt="Capgemini Engineering" />
+          <img style="transform: scale(1.15);" src="./images/sponsors/Capgemini.svg" alt="Capgemini Engineering" />
         </a>
       </div>
       <div class="sponsor">
